--- a/SessionalManagement/Views/Shared/_Layout.cshtml
+++ b/SessionalManagement/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                                     <a class="nav-link" asp-controller="Teacher" asp-action="UploadMarks">Upload Marks</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-controller="Teacher" asp-action="ManageMarks">Manage Marks</a>
+                                    <a class="nav-link" asp-controller="Student" asp-action="Index">Manage Marks</a>
                                 </li>
                             }
                             else if (role == "Admin")
