--- a/SessionalManagement/Views/Shared/_Layout.cshtml
+++ b/SessionalManagement/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                                     <a class="nav-link" asp-controller="Admin" asp-action="Details">Teacher Details</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-controller="Admin" asp-action="ManageUsers">Add Teacher</a>
+                                    
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" asp-controller="Admin" asp-action="ManageUsers">Add Subject</a>
@@ -101,7 +101,7 @@
             <p>&copy; @DateTime.Now.Year - Sessional Management System</p>
         </div>
     </footer>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
